調整樣式、新增照片

--- a/petservices/index.html
+++ b/petservices/index.html
@@ -27,13 +27,13 @@
             <div class="flex gap-4 transition-transform duration-500 ease-in-out" id="scrollContainer">
                 <!-- 卡片 -->
                 <div class="flex-none bg-white shadow-md rounded-lg p-6">
-                    <img src="images/petservices/grooming.jpg" alt="美容服務"
+                    <img src="images/petservices/grooming.webp" alt="美容服務"
                         class="rounded-lg mb-4 h-40 w-full object-cover">
                     <h2 class="text-xl font-semibold mb-2">美容服務</h2>
                     <p class="text-gray-600">提供專業的修毛、造型和指甲護理，讓您的毛孩煥然一新。</p>
                 </div>
                 <div class="flex-none bg-white shadow-md rounded-lg p-6">
-                    <img src="images/petservices/bathing.jpg" alt="洗澡服務"
+                    <img src="images/petservices/bathing.webp" alt="洗澡服務"
                         class="rounded-lg mb-4 h-40 w-full object-cover">
                     <h2 class="text-xl font-semibold mb-2">洗澡服務</h2>
                     <p class="text-gray-600">使用溫和的寵物專用清潔產品，保持毛孩的清潔與健康。</p>
