--- a/contact/index.html
+++ b/contact/index.html
@@ -13,14 +13,14 @@
       </a>
       <a href="https://www.instagram.com/igosalonludi/" target="_blank" 
          class="text-pink-500 hover:text-pink-700">
-          <img src="images/icons/instagram.png" alt="Instagram" class="w-12 h-12">
+          <img src="images/icons/instagram-icon.png" alt="Instagram" class="w-12 h-12">
       </a>
       <a href="https://line.me/R/ti/p/@898ssiqu" target="_blank" 
          class="text-green-500 hover:text-green-700">
-          <img src="images/icons/line.png" alt="Line@" class="w-12 h-12">
+          <img src="images/icons/line-icon.png" alt="Line@" class="w-12 h-12">
       </a>
       <a href="tel:02-82868272" class="text-gray-700 hover:text-gray-900">
-          <img src="images/icons/phone.png" alt="撥打電話" class="w-12 h-12">
+          <img src="images/icons/phone-icon.png" alt="撥打電話" class="w-12 h-12">
       </a>
   </div>
 
