--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
                 <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
                 <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
+                <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
                 <a href="#" data-view="contact" class="nav-link hover:text-yellow-400">聯絡我們</a>
                 <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
                 <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
@@ -147,6 +148,7 @@
         <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
         <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
         <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
+        <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
         <a href="#" data-view="contact" class="nav-link hover:text-yellow-400">聯絡我們</a>
         <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
         <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
