新增home 輪播樣式

--- a/home/index.html
+++ b/home/index.html
@@ -1,8 +1,8 @@
 <section class="carousel relative container mx-auto mt-6">
-  <div class="carousel-inner relative overflow-hidden w-full" id="carouselInner">
+  <!-- <div class="carousel-inner relative overflow-hidden w-full" id="carouselInner"> -->
+    <div class="carousel-inner relative w-full" id="carouselInner">
     <!-- 圖片將由 JavaScript 動態生成 -->
   </div>
-
   <!-- 控制按鈕 -->
   <button id="prevSlide" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-gray-800 text-white px-4 py-2">
     &#10094;
