解決mobile 菜單被擋住問題

--- a/index.html
+++ b/index.html
@@ -137,14 +137,12 @@
                 <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
                 <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
             </nav>
-            <button id="menuToggle" class="md:hidden px-3 py-2 border rounded text-white hover:bg-gray-700">
-                菜單
-            </button>
+            <button id="menuToggle" class="text-white bg-gray-800 px-4 py-2 round border">菜單</button>
         </div>
     </header>
 
     <!-- Mobile Menu -->
-    <nav id="mobileMenu" class="hidden bg-gray-700 text-white flex flex-col space-y-2 p-4 md:hidden">
+    <nav id="mobileMenu" class="hidden">
         <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
         <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
         <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
