--- a/index.html
+++ b/index.html
@@ -122,12 +122,13 @@
 
 <body class="bg-gray-100 font-sans leading-normal tracking-normal flex flex-col min-h-screen">
     <!-- Header -->
-    <header class="bg-gray-800 text-white">
-        <div class="container mx-auto flex justify-between items-center py-4">
+    <header class="bg-gray-800 text-white fixed w-full z-10 shadow">
+        <div class="container mx-auto flex justify-between items-center py-4 px-6">
             <a href="/" class="text-2xl font-bold flex items-center space-x-4">
                 <img src="images/logo.jpg" class="logo w-12 h-12" alt="logo">
                 <span>愛狗Salon蘆荻店</span>
             </a>
+            <!-- 桌面版菜單 -->
             <nav class="hidden md:flex space-x-4">
                 <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
                 <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
@@ -137,19 +138,22 @@
                 <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
                 <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
             </nav>
-            <button id="menuToggle" class="text-white bg-gray-800 px-4 py-2 round border">菜單</button>
+            <!-- 手機版菜單按鈕 -->
+            <button id="menuToggle" class="md:hidden text-white bg-gray-800 px-4 py-2 rounded border">菜單</button>
         </div>
     </header>
 
     <!-- Mobile Menu -->
-    <nav id="mobileMenu" class="hidden">
-        <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
-        <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
-        <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
-        <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
-        <a href="#" data-view="contact" class="nav-link hover:text-yellow-400">聯絡我們</a>
-        <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
-        <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
+    <nav id="mobileMenu" class="hidden fixed top-16 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md bg-gray-700 text-white rounded-lg shadow-lg z-50">
+        <div class="flex flex-col items-center space-y-4 py-6">
+            <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
+            <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
+            <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
+            <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
+            <a href="#" data-view="contact" class="nav-link hover:text-yellow-400">聯絡我們</a>
+            <a href="#" data-view="portfolio" class="nav-link hover:text-yellow-400">作品集</a>
+            <a href="#" data-view="posts" class="nav-link hover:text-yellow-400">文章</a>
+        </div>
     </nav>
 
     <!-- Main Content -->
