--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             ],
             "priceRange": "$$",
             "paymentAccepted": "Cash, Line Payment",
-            "currenciesAccepted": "TWD",
+            "currenciesAccepted": "TWD"
         }
     </script>
     <script type="application/ld+json">
@@ -107,7 +107,7 @@
             "openingHours": "We-Su 10:00-19:00",
             "image": "https://igopetservice.com.tw/images/logo.jpg",
             "hasMap": "https://maps.app.goo.gl/wC1DT42Vzt8FmmTe7",
-            "keywords": "寵物, 寵物店, 用品, 動物, 美容, 洗澡",
+            "keywords": "蘆洲區寵物美容, 寵物美容推薦, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 狗狗洗澡, 貓咪洗澡",
             "sameAs": [
             "https://www.facebook.com/IGoSalonLudi",
             "https://line.me/R/ti/p/@898ssiqu",
@@ -115,7 +115,7 @@
             ],
             "priceRange": "$$",
             "paymentAccepted": "Cash, Line Payment",
-            "currenciesAccepted": "TWD",
+            "currenciesAccepted": "TWD"
         }
     </script>
 </head>
@@ -144,7 +144,8 @@
     </header>
 
     <!-- Mobile Menu -->
-    <nav id="mobileMenu" class="hidden fixed top-16 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md bg-gray-700 text-white rounded-lg shadow-lg z-50">
+    <nav id="mobileMenu"
+        class="hidden fixed top-16 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md bg-gray-700 text-white rounded-lg shadow-lg z-50">
         <div class="flex flex-col items-center space-y-4 py-6">
             <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
             <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
