新增內部登入頁面

--- a/activity/edmlayout.html
+++ b/activity/edmlayout.html
@@ -64,6 +64,7 @@
         <p>愛狗Salon蘆荻店 &copy; 提供專業寵物美容服務。</p>
     </footer>
 
+    <script src="/scripts/common.js"></script>
     <script src="/scripts/router.js"></script>
     <script src="/scripts/activity/edmlayout.js"></script>
 </body>
