--- a/internal/activitycheck/index.html
+++ b/internal/activitycheck/index.html
@@ -59,6 +59,8 @@
         </div>
     </footer>
 
+    <script src="/scripts/common.js"></script>
+    <script src="../checkAuth.js"></script>
     <script src="./index.js"></script>
 </body>
 
