--- a/activity/edmlayout.html
+++ b/activity/edmlayout.html
@@ -40,6 +40,24 @@
 
     <link href="/libs/tailwindcss/tailwind.css" rel="stylesheet">
     <link href="/css/edmlayout.css" rel="stylesheet">
+    <style>
+        ul {
+            list-style-type: disc;
+            /* 圓形標記 */
+            padding-left: 1.5rem;
+            /* 與文字分隔 */
+        }
+
+        ul.square {
+            list-style-type: square;
+            /* 方形標記 */
+        }
+
+        ul.decimal {
+            list-style-type: decimal;
+            /* 數字標記 */
+        }
+    </style>
 </head>
 
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
