--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 "addressLocality": "蘆洲區",
                 "addressRegion": "新北市",
                 "postalCode": "247",
-                "addressCountry": "台灣"
+                "addressRegion": "台灣",
+                "addressCountry": "TW"
             },
             "geo": {
                 "@type": "GeoCoordinates",
@@ -95,7 +96,8 @@
                 "addressLocality": "蘆洲區",
                 "addressRegion": "新北市",
                 "postalCode": "247",
-                "addressCountry": "台灣"
+                "addressRegion": "台灣",
+                "addressCountry": "TW"
             },
             "geo": {
                 "@type": "GeoCoordinates",
