新增404頁面、變更js、css檔案名稱路徑，且自動載入

--- a/activity/edmlayout.html
+++ b/activity/edmlayout.html
@@ -39,7 +39,7 @@
     </script>
 
     <link href="/libs/tailwindcss/tailwind.css" rel="stylesheet">
-    <link href="/css/edmlayout.css" rel="stylesheet">
+    <link href="/css//activity/edmlayout.css" rel="stylesheet">
     <style>
         ul {
             list-style-type: disc;
@@ -77,13 +77,13 @@
             </main>
         </div>
     </div>
+    <div id="app"></div>
 
     <footer class="mt-8 text-center text-gray-500">
         <p>愛狗Salon蘆荻店 &copy; 提供專業寵物美容服務。</p>
     </footer>
 
     <script src="/scripts/common.js"></script>
-    <script src="/scripts/router.js"></script>
     <script src="/scripts/activity/edmlayout.js"></script>
 </body>
 
