內部列表變更檔案名稱

--- a/internal/activitycheck/activitylist.html
+++ b/internal/activitycheck/activitylist.html
@@ -61,7 +61,7 @@
 
     <script src="/scripts/common.js"></script>
     <script src="../checkAuth.js"></script>
-    <script src="./index.js"></script>
+    <script src="./activitylist.js"></script>
 </body>
 
 </html>
