--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/icons/logo.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="images/icons/logo.ico" type="image/x-icon" />
     <meta name="description" content="愛狗Salon蘆荻店，值得您推薦的新北市蘆洲區寵物店，提供專業寵物美容、洗澡、住宿等服務，也有寵物飼料販售，我們的服務對象包括狗和貓。">
-    <meta name="keywords" content="愛狗Salon, 愛狗沙龍, 蘆荻店, 寵物美容, 寵物洗澡, 寵物飼料, 寵物住宿, 狗美容, 貓美容, 蘆洲寵物美容推薦, 蘆洲寵物店推薦">
+    <meta name="keywords" content="愛狗Salon, 愛狗沙龍, 蘆荻店, 蘆洲, 寵物美容, 寵物洗澡, 寵物飼料, 寵物住宿, 狗美容, 貓美容, 蘆洲寵物店, 蘆洲寵物美容, 蘆洲寵物美容推薦, 蘆洲寵物店推薦">
     <meta name="author" content="愛狗Salon">
 
     <!-- Open Graph Meta Tags -->
@@ -71,7 +71,7 @@
             "openingHours": "We-Su 10:00-19:00",
             "image": "https://igopetservice.com.tw/images/logo.jpg",
             "hasMap": "https://maps.app.goo.gl/wC1DT42Vzt8FmmTe7",
-            "keywords": "寵物, 寵物店, 用品, 動物, 美容, 洗澡",
+            "keywords": "蘆洲, 寵物美容, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 蘆洲寵物美容",
             "sameAs": [
             "https://www.facebook.com/IGoSalonLudi",
             "https://line.me/R/ti/p/@898ssiqu",
@@ -107,7 +107,7 @@
             "openingHours": "We-Su 10:00-19:00",
             "image": "https://igopetservice.com.tw/images/logo.jpg",
             "hasMap": "https://maps.app.goo.gl/wC1DT42Vzt8FmmTe7",
-            "keywords": "蘆洲區寵物美容, 寵物美容推薦, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 狗狗洗澡, 貓咪洗澡",
+            "keywords": "蘆洲區寵物美容, 蘆洲寵物美容, 蘆洲寵物美容推薦, 寵物美容推薦, 蘆洲, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 狗狗洗澡, 貓咪洗澡",
             "sameAs": [
             "https://www.facebook.com/IGoSalonLudi",
             "https://line.me/R/ti/p/@898ssiqu",
