--- a/activity/edmlayout.html
+++ b/activity/edmlayout.html
@@ -15,8 +15,8 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="愛狗Salon蘆荻店 專業寵物美容" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://igopetservice.com.tw/" />
-    <meta property="og:image" content="https://igopetservice.com.tw/images/logo.jpg" />
+    <meta property="og:url" content="https://www.igopetservice.com.tw/" />
+    <meta property="og:image" content="https://www.igopetservice.com.tw/images/logo.jpg" />
     <meta property="og:description" content="愛狗Salon蘆荻店，值得您推薦的新北市蘆洲區寵物店，提供專業寵物美容、洗澡、住宿等服務，也有寵物飼料販售，我們的服務對象包括狗和貓。">
     <meta name="og:site_name" content="愛狗Salon蘆荻店 專業寵物美容">
     <!-- Facebook Meta Tags -->
