--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="愛狗Salon蘆荻店 專業寵物美容" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://igopetservice.com.tw/" />
-    <meta property="og:image" content="https://igopetservice.com.tw/images/logo.jpg" />
+    <meta property="og:url" content="https://www.igopetservice.com.tw/" />
+    <meta property="og:image" content="https://www.igopetservice.com.tw/images/logo.jpg" />
     <meta property="og:description" content="愛狗Salon蘆荻店，值得您推薦的新北市蘆洲區寵物店，提供專業寵物美容、洗澡、住宿等服務，也有寵物飼料販售，我們的服務對象包括狗和貓。">
     <meta name="og:site_name" content="愛狗Salon蘆荻店 專業寵物美容">
     <!-- Facebook Meta Tags -->
@@ -51,7 +51,7 @@
             "@context": "https://schema.org",
             "@type": "PetStore",
             "name": "愛狗Salon蘆荻店",
-            "url": "https://igopetservice.com.tw/",
+            "url": "https://www.igopetservice.com.tw/",
             "description": "愛狗Salon蘆荻店，值得您推薦的新北市蘆洲區寵物店，提供專業寵物美容、洗澡、住宿等服務，也有寵物飼料販售，我們的服務對象包括狗和貓。",
             "address": {
                 "@type": "PostalAddress",
@@ -69,7 +69,7 @@
             "telephone": "02-82868272",
             "email": "igopetservice@gmail.com",
             "openingHours": "We-Su 10:00-19:00",
-            "image": "https://igopetservice.com.tw/images/logo.jpg",
+            "image": "https://www.igopetservice.com.tw/images/logo.jpg",
             "hasMap": "https://maps.app.goo.gl/wC1DT42Vzt8FmmTe7",
             "keywords": "蘆洲, 寵物美容, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 蘆洲寵物美容",
             "sameAs": [
@@ -87,7 +87,7 @@
             "@context": "https://schema.org",
             "@type": "LocalBusiness",
             "name": "愛狗Salon蘆荻店",
-            "url": "https://igopetservice.com.tw/",
+            "url": "https://www.igopetservice.com.tw/",
             "description": "愛狗Salon蘆荻店，值得您推薦的新北市蘆洲區寵物店，提供專業寵物美容、洗澡、住宿等服務，也有寵物飼料販售，我們的服務對象包括狗和貓。",
             "address": {
                 "@type": "PostalAddress",
@@ -105,7 +105,7 @@
             "telephone": "02-82868272",
             "email": "igopetservice@gmail.com",
             "openingHours": "We-Su 10:00-19:00",
-            "image": "https://igopetservice.com.tw/images/logo.jpg",
+            "image": "https://www.igopetservice.com.tw/images/logo.jpg",
             "hasMap": "https://maps.app.goo.gl/wC1DT42Vzt8FmmTe7",
             "keywords": "蘆洲區寵物美容, 蘆洲寵物美容, 蘆洲寵物美容推薦, 寵物美容推薦, 蘆洲, 寵物, 寵物店, 用品, 動物, 美容, 洗澡, 狗狗洗澡, 貓咪洗澡",
             "sameAs": [
