--- a/brands/index.html
+++ b/brands/index.html
@@ -4,7 +4,7 @@
     <p class="text-center text-gray-600 mb-12">
       我們店內所使用的品牌，涵蓋洗劑、護毛、飼料和零食等，致力為毛孩提供最好的照顧。<br>
       目前也有不少客人會定期請我們訂購商品，再來店內取貨。<br>
-      若您需要，我們也很樂意協助幫您向這些品牌進貨，歡迎隨時與我們聯絡。
+      若您有購買需求，我們也很樂意協助您向這些品牌代為訂購(但需先請您付部分訂金)，歡迎隨時與我們聯繫。
     </p>
     <div id="brandGrid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
   </div>
