--- a/home/index.html
+++ b/home/index.html
@@ -1,4 +1,5 @@
 <section class="carousel relative container mx-auto mt-6">
+  <h1 class="text-4xl font-bold text-center mb-6">蘆洲寵物美容 值得您推薦</h1>
   <!-- <div class="carousel-inner relative overflow-hidden w-full" id="carouselInner"> -->
     <div class="carousel-inner relative w-full" id="carouselInner">
     <!-- 圖片將由 JavaScript 動態生成 -->
