--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <!-- 桌面版菜單 -->
             <nav class="hidden md:flex space-x-4">
                 <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
-                <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
+                <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務內容</a>
                 <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
                 <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
                 <a href="#" data-view="brands" class="nav-link hover:text-yellow-400">合作品牌</a>
@@ -142,14 +142,18 @@
             <!-- 手機版菜單按鈕 -->
             <button id="menuToggle" class="md:hidden text-white bg-gray-800 px-4 py-2 rounded border">菜單</button>
         </div>
+        <div class="bg-gray-700 text-gray-300 text-center py-2 text-sm md:text-base">
+            蘆洲專業寵物美容服務，讓毛孩享受洗澡就像回家
+        </div>
     </header>
+    
 
     <!-- Mobile Menu -->
     <nav id="mobileMenu"
         class="hidden fixed top-16 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md bg-gray-700 text-white rounded-lg shadow-lg z-50">
         <div class="flex flex-col items-center space-y-4 py-6">
             <a href="#" data-view="home" class="nav-link hover:text-yellow-400">首頁</a>
-            <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務</a>
+            <a href="#" data-view="petservices" class="nav-link hover:text-yellow-400">服務內容</a>
             <a href="#" data-view="activity" class="nav-link hover:text-yellow-400">活動查詢</a>
             <a href="#" data-view="about" class="nav-link hover:text-yellow-400">關於我們</a>
             <a href="#" data-view="brands" class="nav-link hover:text-yellow-400">合作品牌</a>
