--- a/brands/index.html
+++ b/brands/index.html
@@ -1,6 +1,6 @@
 <section class="brands-section py-12 bg-gray-100">
   <div class="container mx-auto px-6">
-    <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">品牌專區</h1>
+    <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">合作品牌</h1>
     <p class="text-center text-gray-600 mb-12">
       我們店內所使用的品牌，涵蓋洗劑、護毛、飼料和零食等，致力為毛孩提供最好的照顧。<br>
       目前也有不少客人會定期請我們訂購商品，再來店內取貨。<br>
