--- a/internal/activitycheck/activitylist.html
+++ b/internal/activitycheck/activitylist.html
@@ -22,9 +22,12 @@
     <!-- Main Content -->
     <main class="container mx-auto py-10">
         <h1 class="text-4xl font-bold text-center mb-6">活動查詢</h1>
-        <p class="text-center text-lg mb-10 text-gray-700">
+        <p class="text-center text-lg mb-2 text-gray-700">
             此頁面僅供內部員工使用，請查看活動列表並選擇詳細資訊或資格驗證。
         </p>
+        <div class="mb-10 text-center text-red-700 border border-red-700 px-2 py-1 rounded">
+            每次消費只能使用一種優惠活動，要讓消費者主動出示活動畫面，才知道消費者選擇的是哪一個優惠哦！
+        </div>
 
         <!-- 查詢中提示 -->
         <div id="loadingMessage" class="text-center text-gray-500 text-lg py-10">
