--- a/petservices/index.html
+++ b/petservices/index.html
@@ -2,7 +2,7 @@
     <!-- 服務頁面標題 -->
     <h1 class="text-4xl font-bold text-center mb-6">服務內容</h1>
     <p class="text-center text-lg mb-10 text-gray-700">
-        愛狗Salon 提供多樣的專業寵物服務，滿足您的毛孩各種需求。
+        愛狗Salon提供洗澡、剪毛、寵物美容等專業服務，讓您安心將毛孩交託給我們照顧。
     </p>
     <div class="text-center mb-10">
         <button id="openModal" class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600">
