--- a/activity/a20250125/edm/a20250125.html
+++ b/activity/a20250125/edm/a20250125.html
@@ -48,7 +48,7 @@
   <section class="mb-8">
     <h2 class="text-2xl font-semibold mb-4">任務積分（最高 2.5 分）</h2>
     <ul class="list-disc pl-6 text-gray-700">
-      <li>Facebook 粉專按讚：+ 0.5 分</li>
+      <li>Facebook 粉專按讚及追蹤：+ 0.5 分</li>
       <li>Instagram 訂閱：+ 0.5 分</li>
       <li>Google 五星評論：+ 0.5 分</li>
       <li>Line 熱點五星評論：護毛</li>
