--- a/activity/a20250125/qualification/a20250125_qualification.html
+++ b/activity/a20250125/qualification/a20250125_qualification.html
@@ -113,7 +113,7 @@
       <div class="form-section">
         <div class="form-section-title">任務積分確認</div>
         <div class="radio-group">
-          <label><input type="radio" name="fbLike" value="yes" checked> Facebook 粉專按讚</label>
+          <label><input type="radio" name="fbLike" value="yes" checked> Facebook 粉專按讚及追蹤</label>
           <label><input type="radio" name="fbLike" value="no"> 未完成</label>
         </div>
         <div class="radio-group">
