文字錯誤調整

--- a/activity/a20250125/edm/a20250125.html
+++ b/activity/a20250125/edm/a20250125.html
@@ -51,7 +51,7 @@
       <li>Facebook 粉專按讚及追蹤：+ 0.5 分</li>
       <li>Instagram 訂閱：+ 0.5 分</li>
       <li>Google 五星評論：+ 0.5 分</li>
-      <li>Line 熱點五星評論：護毛</li>
+      <li>Line 熱點五星評論：+ 0.5 分</li>
       <li>Facebook 評論推薦：+ 0.5 分</li>
     </ul>
   </section>
