--- a/activity/edmlayout.html
+++ b/activity/edmlayout.html
@@ -69,7 +69,7 @@
     <div class="activity-dm">
         <div class="container mx-auto p-6 max-w-4xl bg-white rounded-lg shadow-lg">
             <header class="text-center mb-6">
-                <h1 class="text-4xl font-bold">活動詳細資訊</h1>
+                <h1 class="text-4xl font-bold">愛狗Salon蘆荻店 活動詳細資訊</h1>
             </header>
             <main id="activityContent">
                 <!-- 動態載入的內容 -->
@@ -80,7 +80,8 @@
     <div id="app"></div>
 
     <footer class="mt-8 text-center text-gray-500">
-        <p>愛狗Salon蘆荻店 &copy; 提供專業寵物美容服務。</p>
+        <p>感謝您的支持！如有疑問，請聯繫我們。</p>
+        <p>© 2025 愛狗Salon蘆荻店 &copy; 提供專業寵物美容服務。</p>
     </footer>
 
     <script src="/scripts/common.js"></script>
